# ERPNext-NAYANOP

./: .dockerignore  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Procfile  common_site_config.json  entrypoint.sh  setup-local.sh  setup-site.sh
automotive_crm/: README.md  pyproject.toml  requirements.txt  setup.py
automotive_crm/automotive_crm/: automotive_crm.py  hooks.py  modules.txt  setup.py
automotive_crm/automotive_crm/api/: custom_methods.py  oem_dashboard.py
automotive_crm/automotive_crm/automotive_crm/: tasks.py  utils.py
automotive_crm/automotive_crm/automotive_crm/api/: custom_methods.py  deal_events.py  lead_events.py
automotive_crm/automotive_crm/automotive_crm/config/: docs.py
automotive_crm/automotive_crm/automotive_crm/overrides/: quotation.py
automotive_crm/automotive_crm/automotive_crm/tests/: test_integration_flow.py  test_oem_customer.py
automotive_crm/automotive_crm/config/: __init__.py  desktop.py
automotive_crm/automotive_crm/dashboard/quality_dashboard/: quality_dashboard.json
automotive_crm/automotive_crm/doctype/8d_action/: 8d_action.json
automotive_crm/automotive_crm/doctype/cost_sheet/: cost_sheet.py
automotive_crm/automotive_crm/doctype/customer_agreement/: customer_agreement.json
automotive_crm/automotive_crm/doctype/oem_customer/: oem_customer.py  oem_customer_list.js
automotive_crm/automotive_crm/doctype/oem_plant/: oem_plant.json
automotive_crm/automotive_crm/doctype/oem_visit/: oem_visit.json
automotive_crm/automotive_crm/doctype/part_master/: part_master.json
automotive_crm/automotive_crm/doctype/price_list_part/: price_list_part.py
automotive_crm/automotive_crm/doctype/quality_complaint/: quality_complaint.py
automotive_crm/automotive_crm/doctype/quotation/: quotation.json  quotation.py
automotive_crm/automotive_crm/doctype/quotation_item/: quotation_item.json  quotation_item.py
automotive_crm/automotive_crm/doctype/rfq/: rfq.json
automotive_crm/automotive_crm/doctype/sales_forecast/: sales_forecast.json
automotive_crm/automotive_crm/doctype/tooling/: tooling.py
automotive_crm/automotive_crm/overrides/: quotation.py
automotive_crm/automotive_crm/report/cost_analysis/: cost_analysis.json
automotive_crm/automotive_crm/tests/: test_rfq.py
automotive_crm_infra/docs/: api-docs.md  (+2 more)
(+57 files in other folders)
